--- a/client/components/pages/account/stock/StockItem.module.scss
+++ b/client/components/pages/account/stock/StockItem.module.scss
@@ -36,8 +36,6 @@
 }
 
 .image {
-  max-height: 100%;
-  max-width: 100%;
   -webkit-user-drag: none;
 }
 
